// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exercise with overlay rendering matches snapshot with previewMode 1`] = `
.c4 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c4 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c4 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c6 {
  padding: var(--step-card-gutter-top) var(--step-card-gutter) var(--step-card-gutter-bottom);
  background: var(--step-card-surface);
  overflow: auto;
  border-top: 1px solid #d5d5d5;
}

.c5 {
  padding: var(--step-card-gutter-top) var(--step-card-gutter) var(--step-card-gutter-bottom);
  background: var(--step-card-surface);
  overflow: auto;
}

.c5.exercise-stimulus {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  --step-card-gutter: 14rem;
  --step-card-gutter-top: 4.8rem;
  --step-card-gutter-bottom: 2rem;
  --step-card-surface: #fdfdfd;
  font-size: calc(1.8rem * var(--content-text-scale,1));
  line-height: calc(2.8rem * var(--content-text-scale,1));
  color: #424242;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin: 0 auto 5rem auto;
  border: 0.1rem solid #d5d5d5;
  border-radius: 0.25rem;
  background-color: white;
  overflow: hidden;
}

.c0 {
  padding: 2rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1.6rem 2.4rem;
  background: #daf3f8;
  font-size: 1.8rem;
  line-height: 3rem;
  -webkit-letter-spacing: -0.72px;
  -moz-letter-spacing: -0.72px;
  -ms-letter-spacing: -0.72px;
  letter-spacing: -0.72px;
}

.c2 h2.question-info {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-size: inherit;
  margin: inherit;
  text-transform: uppercase;
}

.c2 h2.question-info .question-id {
  font-weight: normal;
}

.c2 h2.question-info .ox-icon-lock {
  margin-right: 1rem;
}

.c2 .num-questions,
.c2 .points {
  display: none;
}

.c2 .exercise-id,
.c2 .separator {
  font-weight: normal;
}

.c2 .separator {
  margin: 0 0.4rem;
}

.c2 .exercise-id {
  height: 28px;
}

.c2 button {
  color: #5e5e5e;
}

.c2 .scoring {
  margin-left: auto;
  margin-right: 1rem;
}

.c2 .scoring span {
  font-size: 1.2rem;
  font-weight: bold;
  text-transform: uppercase;
}

.c2 .openstax-exercise-badges {
  margin: 0;
  line-height: 2rem;
}

.c2 .openstax-exercise-badges svg {
  display: block;
}

.c2 .openstax-exercise-badges svg:not(.interactive) {
  margin: 0 0 0 6px !important;
}

.c3.c3.c3 .openstax-has-html .splash .frame-wrapper {
  margin-top: 0;
}

.c9 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c8 {
  width: 100%;
}

.c7.openstax-question img {
  display: block;
  margin: auto;
  max-width: 100%;
}

.c7.openstax-question .question-stem {
  margin-bottom: 0;
}

.c7.openstax-question .answers-table {
  font-size: calc(1.6rem * var(--content-text-scale,1));
  line-height: calc(2rem * var(--content-text-scale,1));
}

.c7.openstax-question .instructions {
  font-size: 1.4rem;
  font-style: italic;
  margin-top: 10px;
  color: #818181;
  margin: 0;
}

.c7.openstax-question .instructions i {
  margin-left: 5px;
}

.c7.openstax-question .instructions .text-info {
  color: #0dc0dc;
  padding-left: 5px;
  cursor: pointer;
  font-style: normal;
}

.c7.openstax-question .multiple-choice-prompt {
  font-weight: 600;
}

.c7.openstax-question:not(.openstax-question-preview) .answers-answer {
  width: initial;
  color: #424242;
}

.c7.openstax-question:not(.openstax-question-preview) .answers-answer.answer-selected {
  font-weight: bold;
}

.c7.openstax-question:not(.openstax-question-preview) .answers-answer .answer-label {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c7.openstax-question:not(.openstax-question-preview) .answers-answer .answer-letter-wrapper::before {
  width: 3.6rem;
  height: 3.6rem;
  min-width: 3.6rem;
  min-height: 3.6rem;
  border-radius: calc(3.6rem / 2);
  border-width: 2px;
  border-style: solid;
  border-color: #c6c6c6;
  color: #6f6f6f;
  -webkit-transition: color 0.1s ease-in-out,border-color 0.1s ease-in-out,background-color 0.1s ease-in-out;
  transition: color 0.1s ease-in-out,border-color 0.1s ease-in-out,background-color 0.1s ease-in-out;
  background-color: #ffffff;
  font-family: "Neue Helvetica W01",Helvetica,Arial,sans-serif;
  box-sizing: border-box;
  font-weight: normal;
}

.c7.openstax-question:not(.openstax-question-preview) .answer-answer {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 1rem;
}

.c7.openstax-question:not(.openstax-question-preview) .answer-answer * {
  margin: 0;
}

.c7.openstax-question:not(.openstax-question-preview) .answer-letter-wrapper::before {
  content: attr(data-answer-choice);
  text-align: center;
  padding: 0;
  font-size: 1.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7.openstax-question:not(.openstax-question-preview) .answer-label {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 1rem 0 0 0;
  margin: 0;
  -webkit-transition: color 0.1s ease-in-out;
  transition: color 0.1s ease-in-out;
}

.c7.openstax-question:not(.openstax-question-preview) .answer-input-box:not([disabled]) ~ .answer-label {
  cursor: pointer;
}

.c7.openstax-question:not(.openstax-question-preview) .answer-input-box:not([disabled]) ~ .answer-label:hover {
  font-weight: bold;
}

.c7.openstax-question:not(.openstax-question-preview) .answer-input-box:not([disabled]) ~ .answer-label:hover .answer-letter-wrapper::before {
  color: #026AA1;
  border-color: #026AA1;
}

.c7.openstax-question:not(.openstax-question-preview) .answer-input-box {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c7.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-input-box:checked + .answer-label .answer-letter-wrapper::before,
.c7.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-input-box:checked + .answer-label:hover .answer-letter-wrapper::before {
  color: #fff;
  border-color: #026AA1;
  background-color: #026AA1;
}

.c7.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-input-box:focus-visible + .answer-label .answer-letter-wrapper::before {
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  outline-color: #026AA1;
}

.c7.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-selected .answer-label .answer-letter-wrapper::before,
.c7.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-selected .answer-label:hover .answer-letter-wrapper::before {
  color: #fff;
  border-color: #026AA1;
  background-color: #026AA1;
}

.c7.openstax-question:not(.openstax-question-preview).has-correct-answer .answer-selected:not(.answer-correct) .answer-label .answer-letter-wrapper::before {
  color: #fff;
  border-color: #C22032;
  background-color: #C22032;
}

.c7.openstax-question:not(.openstax-question-preview).has-correct-answer .answer-selected.answer-correct .answer-label .answer-letter-wrapper::before {
  color: #fff;
  border-color: #0D7741;
  background-color: #0D7741;
}

.c7.openstax-question:not(.openstax-question-preview).has-correct-answer .answer-correct:not(.answer-selected) .answer-label .answer-letter-wrapper::before {
  color: #0D7741;
  border-color: #0D7741;
}

.c7.openstax-question:not(.openstax-question-preview).has-incorrect-answer .answer-incorrect .answer-label .answer-letter-wrapper::before,
.c7.openstax-question:not(.openstax-question-preview).has-incorrect-answer .answer-incorrect .answer-label:hover .answer-letter-wrapper::before {
  color: #C22032;
  border-color: #C22032;
}

.c7.openstax-question:not(.openstax-question-preview).has-incorrect-answer .answer-incorrect.answer-selected.answer-incorrect .answer-letter-wrapper::before {
  color: #fff;
  border-color: #C22032;
  background-color: #C22032;
}

.c7.openstax-question:not(.openstax-question-preview) .question-feedback {
  font-family: "Neue Helvetica W01",Helvetica,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  font-style: normal;
  font-weight: 400;
  line-height: 1.6;
  text-align: left;
  text-align: start;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-shadow: none;
  text-transform: none;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  word-break: normal;
  word-spacing: normal;
  white-space: normal;
  line-break: auto;
  z-index: 1;
  position: relative;
  border: 1px solid rgba(0,0,0,0.2);
  background-color: #ffffff;
  background-clip: padding-box;
  max-width: 325px;
  margin: calc(8px - 14px) 0 1rem 8px;
  box-shadow: 0px 4px 4px rgba(0,0,0,0.1);
  color: #6f6f6f;
  font-size: calc(1.4rem * var(--content-text-scale,1));
  max-width: 370px;
}

.c7.openstax-question:not(.openstax-question-preview) .question-feedback .arrow {
  position: absolute;
  display: block;
  width: 16px;
  height: 8px;
  margin-left: 9px;
  top: calc(8px * -1);
}

.c7.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::before,
.c7.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::after {
  position: absolute;
  display: block;
  content: "";
  border-color: transparent;
  border-style: solid;
  border-width: 0 calc(16px / 2) 8px calc(16px / 2);
}

.c7.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::before {
  top: 0;
  border-bottom-color: rgba(0,0,0,0.2);
}

.c7.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::after {
  top: 1px;
  border-bottom-color: #ffffff;
}

.c7.openstax-question:not(.openstax-question-preview) .question-feedback.right {
  right: calc(-9px - 1px);
}

.c7.openstax-question:not(.openstax-question-preview) .question-feedback.right .arrow {
  right: 9px;
}

.c7.openstax-question:not(.openstax-question-preview) .question-feedback > .content {
  padding: 1rem 0.8rem;
}

.c7.openstax-question:not(.openstax-question-preview) .question-feedback .question-feedback-content {
  padding: 0.9rem 1.1rem;
}

.c7.openstax-question .openstax-answer {
  border-top: 1px solid #d5d5d5;
  margin: 10px 0;
  padding: 6px 8px;
}

.c7.openstax-question .answers-table > :last-child,
.c7.openstax-question .answers-table > :last-child > .question-feedback,
.c7.openstax-question .answers-table > .openstax-answer:has(+ .question-feedback-live-region:last-child:empty) {
  margin-bottom: 0;
}

.c7.openstax-question .answers-table + * {
  margin-top: 20px;
}

@media (max-width:999px) {
  .c1 {
    --step-card-gutter: 24px;
    --step-card-gutter-top: 24px;
  }
}

@media (max-width:600px) {
  .c1 {
    --step-card-gutter: 8px;
    --step-card-gutter-top: calc(8px * 2);
  }
}

@media (min-width:1000px) {
  .c1 {
    max-width: 1000px;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 0;
  }
}

@media (min-width:1000px) {
  .c2 button.ox-icon-angle-left,
  .c2 button.ox-icon-angle-right {
    display: none;
  }
}

@media (max-width:999px) {
  .c2 {
    font-size: 1.6rem;
    line-height: 2.5rem;
  }

  .c2 svg.ox-icon {
    display: inherit;
    margin: 0;
  }

  .c2 button.ox-icon-angle-left {
    margin-right: 24px;
  }

  .c2 button.ox-icon-angle-right {
    margin-left: 24px;
  }

  .c2 .openstax-exercise-badges svg {
    display: none;
  }

  .c2 .num-questions,
  .c2 points {
    display: inherit;
  }

  .c2 .exercise-id {
    display: none;
  }

  .c2 button[class^='ox-icon-angle']:hover {
    box-shadow: none;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 1.6rem;
    line-height: 2rem;
    padding: 10px 8px;
  }

  .c2 button.ox-icon-angle-left {
    margin-right: 8px;
  }

  .c2 button.ox-icon-angle-left {
    margin-right: 8px;
  }
}

@media (max-width:600px) {
  .c3.c3 .question-feedback {
    margin-left: 0;
  }

  .c3.c3 .question-feedback .arrow {
    margin-left: 12px;
  }
}

@media (max-width:600px) {
  .c3 .openstax-exercise-badges svg {
    margin-right: 8px;
  }
}

<div
  className=""
>
  <div
    className="c0 step-card-outer"
    data-task-step-id="0"
  >
    <div
      className="c1 exercise-step"
    >
      <div
        onBlur={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        tabIndex={0}
      >
        <div
          className="step-card"
        >
          <div
            className="c2 step-card-header"
          >
            <div>
              <h2
                className="question-info"
              >
                <span>
                  Question 1
                </span>
                <span
                  className="separator"
                >
                  |
                </span>
                <span
                  className="question-id"
                >
                  ID: 
                  1234@4
                </span>
              </h2>
            </div>
          </div>
          <div
            className="c3"
          >
            <div
              className=""
            >
              <div
                className="c4 c5 step-card-body exercise-context"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Context",
                  }
                }
              />
              <div
                className="c4 c5 step-card-body exercise-stimulus"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<b>Stimulus HTML</b>",
                  }
                }
              />
              <div
                data-test-id="student-exercise-question"
              >
                <div
                  className="c6 step-card-question step-card-body"
                >
                  <div
                    className="c7 openstax-question"
                    data-question-number={1}
                    data-test-id="question"
                  >
                    <div
                      className="c8"
                    >
                      <div>
                        <div
                          className="answers-table"
                        >
                          <div
                            className="openstax-answer"
                          >
                            <div
                              className="answers-answer disabled answer-selected"
                            >
                              <input
                                checked={true}
                                className="answer-input-box"
                                disabled={true}
                                id="1234@5-option-0"
                                name="1234@5-options"
                                onChange={[Function]}
                                type="radio"
                              />
                              <label
                                className="answer-label"
                                htmlFor="1234@5-option-0"
                              >
                                <span
                                  aria-hidden="true"
                                  className="answer-letter-wrapper"
                                  data-answer-choice="A"
                                  data-test-id="answer-choice-A"
                                />
                                <span
                                  className="c9 answer-choice-label"
                                >
                                  Choice A:
                                </span>
                                <div
                                  className="answer-answer"
                                >
                                  <div
                                    aria-atomic="true"
                                    aria-live="polite"
                                    className="answer-indicator-live"
                                    role="status"
                                  />
                                  <span
                                    className="c4 answer-content"
                                    dangerouslySetInnerHTML={
                                      Object {
                                        "__html": "True",
                                      }
                                    }
                                  />
                                </div>
                              </label>
                            </div>
                          </div>
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            className="question-feedback-live-region"
                          />
                          <div
                            className="openstax-answer"
                          >
                            <div
                              className="answers-answer disabled"
                            >
                              <input
                                checked={false}
                                className="answer-input-box"
                                disabled={true}
                                id="1234@5-option-1"
                                name="1234@5-options"
                                onChange={[Function]}
                                type="radio"
                              />
                              <label
                                className="answer-label"
                                htmlFor="1234@5-option-1"
                              >
                                <span
                                  aria-hidden="true"
                                  className="answer-letter-wrapper"
                                  data-answer-choice="B"
                                  data-test-id="answer-choice-B"
                                />
                                <span
                                  className="c9 answer-choice-label"
                                >
                                  Choice B:
                                </span>
                                <div
                                  className="answer-answer"
                                >
                                  <div
                                    aria-atomic="true"
                                    aria-live="polite"
                                    className="answer-indicator-live"
                                    role="status"
                                  />
                                  <span
                                    className="c4 answer-content"
                                    dangerouslySetInnerHTML={
                                      Object {
                                        "__html": "False",
                                      }
                                    }
                                  />
                                </div>
                              </label>
                            </div>
                          </div>
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            className="question-feedback-live-region"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Exercise with question state data matches snapshot 1`] = `
.c4 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c4 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c4 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c6 {
  padding: var(--step-card-gutter-top) var(--step-card-gutter) var(--step-card-gutter-bottom);
  background: var(--step-card-surface);
  overflow: auto;
  border-top: 1px solid #d5d5d5;
}

.c5 {
  padding: var(--step-card-gutter-top) var(--step-card-gutter) var(--step-card-gutter-bottom);
  background: var(--step-card-surface);
  overflow: auto;
}

.c5.exercise-stimulus {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  --step-card-gutter: 14rem;
  --step-card-gutter-top: 4.8rem;
  --step-card-gutter-bottom: 2rem;
  --step-card-surface: #fdfdfd;
  font-size: calc(1.8rem * var(--content-text-scale,1));
  line-height: calc(2.8rem * var(--content-text-scale,1));
  color: #424242;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin: 0 auto 5rem auto;
  border: 0.1rem solid #d5d5d5;
  border-radius: 0.25rem;
  background-color: white;
  overflow: hidden;
}

.c0 {
  padding: 2rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1.6rem 2.4rem;
  background: #daf3f8;
  font-size: 1.8rem;
  line-height: 3rem;
  -webkit-letter-spacing: -0.72px;
  -moz-letter-spacing: -0.72px;
  -ms-letter-spacing: -0.72px;
  letter-spacing: -0.72px;
}

.c2 h2.question-info {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-size: inherit;
  margin: inherit;
  text-transform: uppercase;
}

.c2 h2.question-info .question-id {
  font-weight: normal;
}

.c2 h2.question-info .ox-icon-lock {
  margin-right: 1rem;
}

.c2 .num-questions,
.c2 .points {
  display: none;
}

.c2 .exercise-id,
.c2 .separator {
  font-weight: normal;
}

.c2 .separator {
  margin: 0 0.4rem;
}

.c2 .exercise-id {
  height: 28px;
}

.c2 button {
  color: #5e5e5e;
}

.c2 .scoring {
  margin-left: auto;
  margin-right: 1rem;
}

.c2 .scoring span {
  font-size: 1.2rem;
  font-weight: bold;
  text-transform: uppercase;
}

.c2 .openstax-exercise-badges {
  margin: 0;
  line-height: 2rem;
}

.c2 .openstax-exercise-badges svg {
  display: block;
}

.c2 .openstax-exercise-badges svg:not(.interactive) {
  margin: 0 0 0 6px !important;
}

.c3.c3.c3 .openstax-has-html .splash .frame-wrapper {
  margin-top: 0;
}

.c11 {
  background-color: #D4450C;
  color: #ffffff;
  font-size: 1.6rem;
  font-weight: 700;
  line-height: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 4rem;
  padding: 0 3rem;
  border: 0;
  border-radius: 5px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c11:not([disabled]) {
  cursor: pointer;
}

.c11:not([disabled]):hover {
  background: #BE3C08;
}

.c11:not([disabled]):active {
  background: #B03808;
}

.c11:disabled {
  opacity: 0.4;
}

.c9 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c8 {
  width: 100%;
}

.c7.openstax-question img {
  display: block;
  margin: auto;
  max-width: 100%;
}

.c7.openstax-question .question-stem {
  margin-bottom: 0;
}

.c7.openstax-question .answers-table {
  font-size: calc(1.6rem * var(--content-text-scale,1));
  line-height: calc(2rem * var(--content-text-scale,1));
}

.c7.openstax-question .instructions {
  font-size: 1.4rem;
  font-style: italic;
  margin-top: 10px;
  color: #818181;
  margin: 0;
}

.c7.openstax-question .instructions i {
  margin-left: 5px;
}

.c7.openstax-question .instructions .text-info {
  color: #0dc0dc;
  padding-left: 5px;
  cursor: pointer;
  font-style: normal;
}

.c7.openstax-question .multiple-choice-prompt {
  font-weight: 600;
}

.c7.openstax-question:not(.openstax-question-preview) .answers-answer {
  width: initial;
  color: #424242;
}

.c7.openstax-question:not(.openstax-question-preview) .answers-answer.answer-selected {
  font-weight: bold;
}

.c7.openstax-question:not(.openstax-question-preview) .answers-answer .answer-label {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c7.openstax-question:not(.openstax-question-preview) .answers-answer .answer-letter-wrapper::before {
  width: 3.6rem;
  height: 3.6rem;
  min-width: 3.6rem;
  min-height: 3.6rem;
  border-radius: calc(3.6rem / 2);
  border-width: 2px;
  border-style: solid;
  border-color: #c6c6c6;
  color: #6f6f6f;
  -webkit-transition: color 0.1s ease-in-out,border-color 0.1s ease-in-out,background-color 0.1s ease-in-out;
  transition: color 0.1s ease-in-out,border-color 0.1s ease-in-out,background-color 0.1s ease-in-out;
  background-color: #ffffff;
  font-family: "Neue Helvetica W01",Helvetica,Arial,sans-serif;
  box-sizing: border-box;
  font-weight: normal;
}

.c7.openstax-question:not(.openstax-question-preview) .answer-answer {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 1rem;
}

.c7.openstax-question:not(.openstax-question-preview) .answer-answer * {
  margin: 0;
}

.c7.openstax-question:not(.openstax-question-preview) .answer-letter-wrapper::before {
  content: attr(data-answer-choice);
  text-align: center;
  padding: 0;
  font-size: 1.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7.openstax-question:not(.openstax-question-preview) .answer-label {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 1rem 0 0 0;
  margin: 0;
  -webkit-transition: color 0.1s ease-in-out;
  transition: color 0.1s ease-in-out;
}

.c7.openstax-question:not(.openstax-question-preview) .answer-input-box:not([disabled]) ~ .answer-label {
  cursor: pointer;
}

.c7.openstax-question:not(.openstax-question-preview) .answer-input-box:not([disabled]) ~ .answer-label:hover {
  font-weight: bold;
}

.c7.openstax-question:not(.openstax-question-preview) .answer-input-box:not([disabled]) ~ .answer-label:hover .answer-letter-wrapper::before {
  color: #026AA1;
  border-color: #026AA1;
}

.c7.openstax-question:not(.openstax-question-preview) .answer-input-box {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c7.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-input-box:checked + .answer-label .answer-letter-wrapper::before,
.c7.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-input-box:checked + .answer-label:hover .answer-letter-wrapper::before {
  color: #fff;
  border-color: #026AA1;
  background-color: #026AA1;
}

.c7.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-input-box:focus-visible + .answer-label .answer-letter-wrapper::before {
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  outline-color: #026AA1;
}

.c7.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-selected .answer-label .answer-letter-wrapper::before,
.c7.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-selected .answer-label:hover .answer-letter-wrapper::before {
  color: #fff;
  border-color: #026AA1;
  background-color: #026AA1;
}

.c7.openstax-question:not(.openstax-question-preview).has-correct-answer .answer-selected:not(.answer-correct) .answer-label .answer-letter-wrapper::before {
  color: #fff;
  border-color: #C22032;
  background-color: #C22032;
}

.c7.openstax-question:not(.openstax-question-preview).has-correct-answer .answer-selected.answer-correct .answer-label .answer-letter-wrapper::before {
  color: #fff;
  border-color: #0D7741;
  background-color: #0D7741;
}

.c7.openstax-question:not(.openstax-question-preview).has-correct-answer .answer-correct:not(.answer-selected) .answer-label .answer-letter-wrapper::before {
  color: #0D7741;
  border-color: #0D7741;
}

.c7.openstax-question:not(.openstax-question-preview).has-incorrect-answer .answer-incorrect .answer-label .answer-letter-wrapper::before,
.c7.openstax-question:not(.openstax-question-preview).has-incorrect-answer .answer-incorrect .answer-label:hover .answer-letter-wrapper::before {
  color: #C22032;
  border-color: #C22032;
}

.c7.openstax-question:not(.openstax-question-preview).has-incorrect-answer .answer-incorrect.answer-selected.answer-incorrect .answer-letter-wrapper::before {
  color: #fff;
  border-color: #C22032;
  background-color: #C22032;
}

.c7.openstax-question:not(.openstax-question-preview) .question-feedback {
  font-family: "Neue Helvetica W01",Helvetica,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  font-style: normal;
  font-weight: 400;
  line-height: 1.6;
  text-align: left;
  text-align: start;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-shadow: none;
  text-transform: none;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  word-break: normal;
  word-spacing: normal;
  white-space: normal;
  line-break: auto;
  z-index: 1;
  position: relative;
  border: 1px solid rgba(0,0,0,0.2);
  background-color: #ffffff;
  background-clip: padding-box;
  max-width: 325px;
  margin: calc(8px - 14px) 0 1rem 8px;
  box-shadow: 0px 4px 4px rgba(0,0,0,0.1);
  color: #6f6f6f;
  font-size: calc(1.4rem * var(--content-text-scale,1));
  max-width: 370px;
}

.c7.openstax-question:not(.openstax-question-preview) .question-feedback .arrow {
  position: absolute;
  display: block;
  width: 16px;
  height: 8px;
  margin-left: 9px;
  top: calc(8px * -1);
}

.c7.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::before,
.c7.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::after {
  position: absolute;
  display: block;
  content: "";
  border-color: transparent;
  border-style: solid;
  border-width: 0 calc(16px / 2) 8px calc(16px / 2);
}

.c7.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::before {
  top: 0;
  border-bottom-color: rgba(0,0,0,0.2);
}

.c7.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::after {
  top: 1px;
  border-bottom-color: #ffffff;
}

.c7.openstax-question:not(.openstax-question-preview) .question-feedback.right {
  right: calc(-9px - 1px);
}

.c7.openstax-question:not(.openstax-question-preview) .question-feedback.right .arrow {
  right: 9px;
}

.c7.openstax-question:not(.openstax-question-preview) .question-feedback > .content {
  padding: 1rem 0.8rem;
}

.c7.openstax-question:not(.openstax-question-preview) .question-feedback .question-feedback-content {
  padding: 0.9rem 1.1rem;
}

.c7.openstax-question .openstax-answer {
  border-top: 1px solid #d5d5d5;
  margin: 10px 0;
  padding: 6px 8px;
}

.c7.openstax-question .answers-table > :last-child,
.c7.openstax-question .answers-table > :last-child > .question-feedback,
.c7.openstax-question .answers-table > .openstax-answer:has(+ .question-feedback-live-region:last-child:empty) {
  margin-bottom: 0;
}

.c7.openstax-question .answers-table + * {
  margin-top: 20px;
}

.c10 {
  padding: 0 var(--step-card-gutter) var(--step-card-gutter-bottom);
  border-top: 1px solid #d5d5d5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: calc(1.6rem * var(--content-text-scale,1));
  line-height: calc(2rem * var(--content-text-scale,1));
  background: #fdfdfd;
  overflow: auto;
}

.c10 > * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c10 button {
  width: 160px;
  height: 48px;
}

.c10 .step-card-footer-inner {
  padding-top: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 1.6rem;
}

.c10 .points .attempts-left {
  color: #B03808;
  font-weight: bold;
}

.c10 .controls {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  gap: 0.8rem;
  margin-left: auto;
}

.c10 .controls button:has(~ button),
.c10 .controls button + button {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  min-width: 0;
  width: 100px;
}

@media (max-width:999px) {
  .c1 {
    --step-card-gutter: 24px;
    --step-card-gutter-top: 24px;
  }
}

@media (max-width:600px) {
  .c1 {
    --step-card-gutter: 8px;
    --step-card-gutter-top: calc(8px * 2);
  }
}

@media (min-width:1000px) {
  .c1 {
    max-width: 1000px;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 0;
  }
}

@media (min-width:1000px) {
  .c2 button.ox-icon-angle-left,
  .c2 button.ox-icon-angle-right {
    display: none;
  }
}

@media (max-width:999px) {
  .c2 {
    font-size: 1.6rem;
    line-height: 2.5rem;
  }

  .c2 svg.ox-icon {
    display: inherit;
    margin: 0;
  }

  .c2 button.ox-icon-angle-left {
    margin-right: 24px;
  }

  .c2 button.ox-icon-angle-right {
    margin-left: 24px;
  }

  .c2 .openstax-exercise-badges svg {
    display: none;
  }

  .c2 .num-questions,
  .c2 points {
    display: inherit;
  }

  .c2 .exercise-id {
    display: none;
  }

  .c2 button[class^='ox-icon-angle']:hover {
    box-shadow: none;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 1.6rem;
    line-height: 2rem;
    padding: 10px 8px;
  }

  .c2 button.ox-icon-angle-left {
    margin-right: 8px;
  }

  .c2 button.ox-icon-angle-left {
    margin-right: 8px;
  }
}

@media (max-width:600px) {
  .c3.c3 .question-feedback {
    margin-left: 0;
  }

  .c3.c3 .question-feedback .arrow {
    margin-left: 12px;
  }
}

@media (max-width:600px) {
  .c3 .openstax-exercise-badges svg {
    margin-right: 8px;
  }
}

@media (max-width:600px) {
  .c10 .step-card-footer-inner {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:1000px) {
  .c10 {
    padding: 0 var(--step-card-gutter) 32px;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }

  .c10 .points {
    max-width: 400px;
  }
}

<div
  className=""
>
  <div
    className="c0 step-card-outer"
    data-task-step-id="0"
  >
    <div
      className="c1 exercise-step"
    >
      <div>
        <div
          className="step-card"
        >
          <div
            className="c2 step-card-header"
          >
            <div>
              <h2
                className="question-info"
              >
                <span>
                  Question 1
                </span>
                <span
                  className="separator"
                >
                  |
                </span>
                <span
                  className="question-id"
                >
                  ID: 
                  1234@5
                </span>
              </h2>
            </div>
          </div>
          <div
            className="c3"
          >
            <div
              className=""
            >
              <div
                className="c4 c5 step-card-body exercise-context"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Context",
                  }
                }
              />
              <div
                className="c4 c5 step-card-body exercise-stimulus"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<b>Stimulus HTML</b>",
                  }
                }
              />
              <div
                data-test-id="student-exercise-question"
              >
                <div
                  className="c6 step-card-question step-card-body"
                >
                  <div
                    className="c7 openstax-question"
                    data-question-number={1}
                    data-test-id="question"
                  >
                    <div
                      className="c8"
                    >
                      <div>
                        <div
                          aria-label="Answer choices"
                          className="answers-table"
                          role="radiogroup"
                        >
                          <div
                            className="openstax-answer"
                          >
                            <div
                              className="answers-answer disabled answer-selected"
                            >
                              <input
                                checked={true}
                                className="answer-input-box"
                                disabled={true}
                                id="1-option-0"
                                name="1-options"
                                onChange={[Function]}
                                type="radio"
                              />
                              <label
                                className="answer-label"
                                htmlFor="1-option-0"
                              >
                                <span
                                  aria-hidden="true"
                                  className="answer-letter-wrapper"
                                  data-answer-choice="A"
                                  data-test-id="answer-choice-A"
                                />
                                <span
                                  className="c9 answer-choice-label"
                                >
                                  Choice A:
                                </span>
                                <div
                                  className="answer-answer"
                                >
                                  <div
                                    aria-atomic="true"
                                    aria-live="polite"
                                    className="answer-indicator-live"
                                    role="status"
                                  />
                                  <span
                                    className="c4 answer-content"
                                    dangerouslySetInnerHTML={
                                      Object {
                                        "__html": "True",
                                      }
                                    }
                                  />
                                </div>
                              </label>
                            </div>
                          </div>
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            className="question-feedback-live-region"
                          />
                          <div
                            className="openstax-answer"
                          >
                            <div
                              className="answers-answer disabled"
                            >
                              <input
                                checked={false}
                                className="answer-input-box"
                                disabled={true}
                                id="1-option-1"
                                name="1-options"
                                onChange={[Function]}
                                type="radio"
                              />
                              <label
                                className="answer-label"
                                htmlFor="1-option-1"
                              >
                                <span
                                  aria-hidden="true"
                                  className="answer-letter-wrapper"
                                  data-answer-choice="B"
                                  data-test-id="answer-choice-B"
                                />
                                <span
                                  className="c9 answer-choice-label"
                                >
                                  Choice B:
                                </span>
                                <div
                                  className="answer-answer"
                                >
                                  <div
                                    aria-atomic="true"
                                    aria-live="polite"
                                    className="answer-indicator-live"
                                    role="status"
                                  />
                                  <span
                                    className="c4 answer-content"
                                    dangerouslySetInnerHTML={
                                      Object {
                                        "__html": "False",
                                      }
                                    }
                                  />
                                </div>
                              </label>
                            </div>
                          </div>
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            className="question-feedback-live-region"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="c10 step-card-footer"
                >
                  <div
                    className="step-card-footer-inner"
                  >
                    <div
                      className="controls"
                    >
                      <button
                        className="c11"
                        data-test-id="continue-btn"
                        onClick={[Function]}
                      >
                        Next
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
